clusters/my-cluster/localhost-status/localhost-status-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-localhost-status
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /status
