clusters/my-cluster/localhost-status/localhost-status-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: localhost-status
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-localhost-status@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: localhost
      http:
        paths:
          - path: /status
            pathType: Prefix
            backend:
              service:
                name: rust-hello
                port:
                  number: 3000
